[package]
name = "async-net-mini"
# When publishing a new version:
# - Update CHANGELOG.md
# - Create "v2.x.y" git tag
version = "2.0.0"
authors = [
    "Thomas Schaller <me@torkleyy.com>",
    "Stjepan Glavina <stjepang@gmail.com>",
]
edition = "2021"
rust-version = "1.63"
description = "Async networking primitives for TCP/UDP/Unix communication for esp-idf"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/smol-rs/async-net"
homepage = "https://github.com/smol-rs/async-net"
documentation = "https://docs.rs/async-net"
keywords = ["networking", "uds", "mio", "reactor", "std"]
categories = ["asynchronous", "network-programming", "os"]
exclude = ["/.*"]

[features]
dns = ["dep:blocking"]

[dependencies]
async-io-mini = { version = "0.3.0", default-features = false, features = [
    "futures-lite",
] }
blocking = { version = "1.6.1", optional = true }
futures-lite = "2.0.0"
